# collector

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MIGRATIONS.md  Makefile  README.md  THEME_ROADMAP.md  app.py  db.py  docker-compose.yml  migrate.py  migrations.py  pyproject.toml  v2_tasks.md
.github/workflows/: test.yml
docs/specs/: visitor-context-library.md
lib/: package.json  tsconfig.json  tsup.config.ts
lib/src/: config.ts  index.ts  types.ts
lib/src/collectors/: context.ts  fingerprint.ts  network.ts  performance.ts
lib/src/core/: emitter.ts  identity.ts  profiler.ts
lib/src/utils/: storage.ts
lib/tests/: setup.ts
lib/tests/integration/: full-workflow.test.ts
lib/tests/unit/: config.test.ts  context.test.ts  emitter.test.ts  fingerprint.test.ts  identity.test.ts  network.test.ts  performance.test.ts  storage.test.ts
migrations/: 001_initial_schema.sql  002_add_phase1_columns.sql  003_convert_text_to_jsonb.sql  004_add_identity_keys.sql  005_create_events_table.sql  README.md
scripts/: build-library.sh
static/: base.css  ping-eq.js  pingEqualizer.js  script.js  theme.css
static/themes/: cyberpunk.css  dark.css
templates/: Dockerfile  index.html
tests/: conftest.py  factories.py  test_api_collect.py  test_api_event.py  test_context_library.py  test_health.py
tests/e2e/: test_capture.py
